lz, hrusch: wip Fügt PlatzId und Klassenstubs hinzu